--- a/Table WatchKit App/Base.lproj/Interface.storyboard
+++ b/Table WatchKit App/Base.lproj/Interface.storyboard
@@ -1,15 +1,54 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11134" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="17701" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch38"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11055"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="17500"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Table_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <table alignment="left" id="WsX-Wl-RK8">
+                            <items>
+                                <tableRow identifier="tableId" id="ytY-jo-avt" customClass="TableRowController" customModule="Table_WatchKit_Extension">
+                                    <group key="rootItem" width="1" alignment="left" id="x0L-vA-I1K">
+                                        <items>
+                                            <label alignment="left" verticalAlignment="center" text="Label" id="Njq-1p-UEc"/>
+                                        </items>
+                                        <connections>
+                                            <segue destination="d39-wN-VQI" kind="push" id="Oew-jV-cb9"/>
+                                        </connections>
+                                    </group>
+                                    <connections>
+                                        <outlet property="title" destination="Njq-1p-UEc" id="xtk-ZE-ISb"/>
+                                    </connections>
+                                </tableRow>
+                            </items>
+                        </table>
+                    </items>
+                    <connections>
+                        <outlet property="table" destination="WsX-Wl-RK8" id="ryx-X0-cZm"/>
+                    </connections>
+                </controller>
             </objects>
+            <point key="canvasLocation" x="317" y="98"/>
+        </scene>
+        <!--Detail Controller-->
+        <scene sceneID="FLq-y4-LpF">
+            <objects>
+                <controller id="d39-wN-VQI" customClass="DetailController" customModule="Table_WatchKit_Extension">
+                    <items>
+                        <label alignment="left" text="Label" id="CBB-8V-R1g"/>
+                    </items>
+                    <connections>
+                        <outlet property="title" destination="CBB-8V-R1g" id="YIg-W8-mAf"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="621" y="98"/>
         </scene>
     </scenes>
 </document>
